# teckyl

./: README.md  run_tests.sh
teckyl/: CMakeLists.txt  main.cc
teckyl/tc/lang/: ranges.cpp  ranges.h  sema.h  tree.h  tree_views.h
teckyl/tc/lang/inference/: CMakeLists.txt  analysis.h  expr.cpp  expr.h  expression_parser.h  expressions.cc  transformation.cpp  transformation.h
